Basic HTML layout, header/calculaor and divs/footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,46 @@
     <title>Calculator | Ryan Stokes</title>
 </head>
 <body>
-    
+    <header id="header">
+        <h1 id="heading">
+
+        </h1>
+        <div id="headerLogo">
+            
+        </div>
+    </header>
+    <div id="calculatorContainer">
+        <div id="calculator">
+            <div id="inputScreen">    
+            </div>
+            <div id="numberInput">
+                <button id="numberInput"></button>
+                <button id="numberInput"></button>
+                <button id="numberInput"></button>
+                <button id="numberInput"></button>
+                <button id="numberInput"></button>
+                <button id="numberInput"></button>
+                <button id="numberInput"></button>
+                <button id="numberInput"></button>
+                <button id="numberInput"></button>
+                <button id="numberInput"></button>
+            </div>
+            <div id="operatorInput">
+                <button id="plus"></button>
+                <button id="minus"></button>
+                <button id="multiply"></button>
+                <button id="divide"></button>
+                <button id="equal"></button>
+            </div>
+        </div>
+    </div>
+    <footer id="footer">
+        <div id="footerContent">
+
+        </div>
+        <div id="socials">
+
+        </div>
+    </footer>
 </body>
 </html>
