--- a/index.html
+++ b/index.html
@@ -10,44 +10,48 @@
 <body>
     <header id="header">
         <h1 id="heading">
-
+            Calculator
         </h1>
         <div id="headerLogo">
-            
+            <img src="" alt="This Image is Unavailable">
         </div>
     </header>
-    <div id="calculatorContainer">
-        <div id="calculator">
-            <div id="inputScreen">    
-            </div>
-            <div id="numberInput">
-                <button id="numberInput"></button>
-                <button id="numberInput"></button>
-                <button id="numberInput"></button>
-                <button id="numberInput"></button>
-                <button id="numberInput"></button>
-                <button id="numberInput"></button>
-                <button id="numberInput"></button>
-                <button id="numberInput"></button>
-                <button id="numberInput"></button>
-                <button id="numberInput"></button>
-            </div>
-            <div id="operatorInput">
-                <button id="plus"></button>
-                <button id="minus"></button>
-                <button id="multiply"></button>
-                <button id="divide"></button>
-                <button id="equal"></button>
+    <div id="container">
+        <div id="calculatorContainer">
+            <div id="calculator">
+                <div id="inputScreen"> 
+                    
+                </div>
+                <div id="numberInput">
+                    <button id="numberBtn">7</button>
+                    <button id="numberBtn">8</button>
+                    <button id="numberBtn">9</button>
+                    <button id="numberBtn">4</button>
+                    <button id="numberBtn">5</button>
+                    <button id="numberBtn">6</button>
+                    <button id="numberBtn">1</button>
+                    <button id="numberBtn">2</button>
+                    <button id="numberBtn">3</button>
+                    <button id="numberBtn">0</button>
+                    <button id="equals">=</button>
+                    <button id="clear">C</button>
+                </div>
+                <div id="operatorInput">
+                    <button id="plus">+</button>
+                    <button id="minus">-</button>
+                    <button id="multiply">X</button>
+                    <button id="divide">/</button>
+                </div>
             </div>
         </div>
+        <footer id="footer">
+            <div id="footerContent">
+                Ryan Stokes 2023
+            </div>
+            <div id="socials">
+
+            </div>
+        </footer>
     </div>
-    <footer id="footer">
-        <div id="footerContent">
-
-        </div>
-        <div id="socials">
-
-        </div>
-    </footer>
 </body>
 </html>
