--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Calculator | Ryan Stokes</title>
 </head>
 <body>
@@ -23,16 +23,16 @@
                     
                 </div>
                 <div id="numberInput">
-                    <button id="numberBtn">7</button>
-                    <button id="numberBtn">8</button>
-                    <button id="numberBtn">9</button>
-                    <button id="numberBtn">4</button>
-                    <button id="numberBtn">5</button>
-                    <button id="numberBtn">6</button>
-                    <button id="numberBtn">1</button>
-                    <button id="numberBtn">2</button>
-                    <button id="numberBtn">3</button>
-                    <button id="numberBtn">0</button>
+                    <button class="numberBtn">7</button>
+                    <button class="numberBtn">8</button>
+                    <button class="numberBtn">9</button>
+                    <button class="numberBtn">4</button>
+                    <button class="numberBtn">5</button>
+                    <button class="numberBtn">6</button>
+                    <button class="numberBtn">1</button>
+                    <button class="numberBtn">2</button>
+                    <button class="numberBtn">3</button>
+                    <button class="numberBtn">0</button>
                     <button id="equals">=</button>
                     <button id="clear">C</button>
                 </div>
