Changes for header logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             Calculator
         </h1>
         <div id="headerLogo">
-            <img src="" alt="This Image is Unavailable">
+            <img src="images/Untitled-1.png" alt="This Image is Unavailable">
         </div>
     </header>
     <div id="container">
